refactor: restructure project, migrate to slog, and decouple Xray engine

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Release for Windows
-        run: go build -ldflags "-s -w" -o xrc-windows-amd64.exe
+        run: go build -ldflags "-s -w" -o xrc-windows-amd64.exe ./cmd/proxy
         env:
           GOOS: windows
           GOARCH: amd64
@@ -31,7 +31,7 @@ jobs:
           path: 'xrc-windows-amd64.exe'
 
       - name: Release for Darwin
-        run: go build -ldflags "-s -w" -o xrc-darwin-amd64
+        run: go build -ldflags "-s -w" -o xrc-darwin-amd64 ./cmd/proxy
         env:
           GOOS: darwin
           GOARCH: amd64
@@ -41,7 +41,7 @@ jobs:
           path: 'xrc-darwin-amd64'
 
       - name: Release for Linux
-        run: go build -ldflags "-s -w" -o xrc-linux-amd64
+        run: go build -ldflags "-s -w" -o xrc-linux-amd64 ./cmd/proxy
         env:
           GOOS: linux
           GOARCH: amd64
